Ajout .h et Makefile

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -1,4 +1,5 @@
 all:
-	gcc -Wall -c Temp.c
-	gcc -Wall -o Temp Temp.o
+	gcc -Wall -c main.c
+	gcc -Wall -c code.c
+	gcc -Wall -o main main.o code.o
 	
